[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Space.png" type="Texture" id=2]
[ext_resource path="res://Shaker.tscn" type="PackedScene" id=3]
[ext_resource path="res://World.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://RocketSpawner.gd" type="Script" id=6]
[ext_resource path="res://AsteroidSpawner.gd" type="Script" id=7]
[ext_resource path="res://Music.ogg" type="AudioStream" id=8]
[ext_resource path="res://SlowTime.gd" type="Script" id=9]
[ext_resource path="res://MainTheme.tres" type="Theme" id=10]

[sub_resource type="Animation" id=1]

resource_name = "fade_in"
length = 1.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Blackout:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1.6 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "game_over"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Blackout:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Interface/Container:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Interface/Container:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../Music:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../Music:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 0.25, 0.25 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="1" groups=[
"camera",
]]

editor/display_folded = true
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Shaker" parent="Camera2D" index="0" instance=ExtResource( 3 )]

[node name="World" parent="." index="2" instance=ExtResource( 4 )]

[node name="Player" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 128, 0 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="RocketSpawner" type="Node" parent="." index="4"]

script = ExtResource( 6 )

[node name="RocketTimer" type="Timer" parent="RocketSpawner" index="0"]

process_mode = 1
wait_time = 30.0
one_shot = false
autostart = true

[node name="AsteroidSpawner" type="Node" parent="." index="5"]

script = ExtResource( 7 )

[node name="SpawnTimer" type="Timer" parent="AsteroidSpawner" index="0"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="DifficultyTween" type="Tween" parent="." index="6"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Music" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Effects" type="Node" parent="." index="8"]

[node name="SlowTime" type="Node" parent="Effects" index="0"]

script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="9"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Effects" type="Control" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Effects" index="0"]

root_node = NodePath("..")
autoplay = "fade_in"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade_in = SubResource( 1 )
anims/game_over = SubResource( 2 )
blend_times = [  ]

[node name="Blackout" type="ColorRect" parent="CanvasLayer/Effects" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Interface" type="Control" parent="CanvasLayer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Container" type="Container" parent="CanvasLayer/Interface" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Interface/Container" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.5
margin_top = -35.5
margin_right = 111.5
margin_bottom = 35.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="EndScoreText" type="Label" parent="CanvasLayer/Interface/Container/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 223.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 10 )
text = "Score:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="EndScoreValue" type="Label" parent="CanvasLayer/Interface/Container/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 51.0
margin_right = 223.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 10 )
text = "2000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Score" type="Container" parent="CanvasLayer/Interface" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Interface/Score" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="ScoreText" type="Label" parent="CanvasLayer/Interface/Score/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 172.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 10 )
text = "Score: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="ScoreValue" type="Label" parent="CanvasLayer/Interface/Score/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_right = 204.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 10 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="ScoreTween" type="Tween" parent="CanvasLayer/Interface/Score/HBoxContainer" index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="damaged" from="World" to="Effects/SlowTime" method="start"]

[connection signal="destroyed" from="World" to="." method="_on_World_destroyed"]

[connection signal="shot" from="Player" to="Camera2D/Shaker" method="start" binds= [ 0.1, 15.0, 2.0, 0.0 ]]

[connection signal="timeout" from="RocketSpawner/RocketTimer" to="RocketSpawner" method="_on_RocketTimer_timeout"]

[connection signal="timeout" from="AsteroidSpawner/SpawnTimer" to="AsteroidSpawner" method="_on_Timer_timeout"]


